--- a/package.json
+++ b/package.json
@@ -5,13 +5,25 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@faker-js/faker": "^6.0.0-alpha.6",
+    "lodash": "^4.17.21",
+    "uuid": "^3.4.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.4",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/vue3": "^6.4.19",
     "@vitejs/plugin-vue": "^2.2.0",
-    "vite": "^2.8.0"
+    "babel-loader": "^8.2.3",
+    "vite": "^2.8.0",
+    "vue-loader": "^16.8.3"
   }
 }
