--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@faker-js/faker": "^6.0.0-alpha.6",
+    "jdenticon": "^3.1.1",
     "lodash": "^4.17.21",
-    "uuid": "^3.4.0",
+    "md5": "^2.3.0",
+    "nanoid": "^3.3.1",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@babel/core": "^7.17.4",
+    "@faker-js/faker": "^6.0.0-alpha.6",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-links": "^6.4.19",
