--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nwl-components",
-  "version": "0.0.10",
+  "version": "0.0.12",
   "files": [
     "dist"
   ],
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "jdenticon": "^3.1.1",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "md5": "^2.3.0",
     "nanoid": "^3.3.1"
   },
@@ -33,7 +33,6 @@
     "vue": "^3.2.25"
   },
   "devDependencies": {
-    "vue": "^3.2.25",
     "@babel/core": "^7.17.4",
     "@faker-js/faker": "^6.0.0-alpha.6",
     "@storybook/addon-actions": "^6.4.19",
@@ -43,6 +42,7 @@
     "@vitejs/plugin-vue": "^2.2.0",
     "babel-loader": "^8.2.3",
     "vite": "^2.8.0",
+    "vue": "^3.2.25",
     "vue-loader": "^16.8.3"
   }
 }
