--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nwl-components",
-  "version": "0.0.25",
+  "version": "1.0.0",
   "files": [
     "dist"
   ],
@@ -29,7 +29,8 @@
     "lodash-es": "^4.17.21",
     "md5": "^2.3.0",
     "nanoid": "^3.3.1",
-    "splitpanes": "^3.1.0"
+    "splitpanes": "^3.1.0",
+    "vue-resizable": "^2.1.5"
   },
   "peerDependencies": {
     "vue": "^3.2.25"
