add test runner for storybook

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,26 @@ on:
     branches: main
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+        - uses: actions/checkout@v4
+        - uses: actions/setup-node@v4
+          with:
+            node-version: 16
+        - run: npm ci
+        - run: |
+            npm run storybook &
+            npm run test-storybook
+
   publish:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: 16
       - run: npm ci
       - run: npm run build
       - uses: JS-DevTools/npm-publish@v3
