--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nwl-components",
-  "version": "1.3.8",
+  "version": "1.3.9",
   "files": [
     "dist"
   ],
@@ -20,8 +20,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "test-storybook": "test-storybook"
   },
   "dependencies": {
@@ -38,14 +38,24 @@
   "devDependencies": {
     "@babel/core": "^7.17.4",
     "@faker-js/faker": "^6.0.0-alpha.6",
-    "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-essentials": "^6.4.19",
-    "@storybook/addon-links": "^6.4.19",
+    "@storybook/addon-essentials": "^7.6.19",
+    "@storybook/addon-interactions": "^7.6.19",
+    "@storybook/addon-links": "^7.6.19",
+    "@storybook/blocks": "^7.6.19",
+    "@storybook/test": "^7.6.19",
     "@storybook/test-runner": "^0.17.0",
-    "@storybook/vue3": "^6.4.19",
-    "@vitejs/plugin-vue": "^2.2.0",
+    "@storybook/vue3": "^7.6.19",
+    "@storybook/vue3-vite": "^7.6.19",
+    "@vitejs/plugin-vue": "^4.6.2",
     "babel-loader": "^8.2.3",
-    "vite": "^2.8.0",
+    "eslint": "^8.57.0",
+    "eslint-config-naat": "github:neuroanatomy/eslint-config-naat",
+    "eslint-plugin-storybook": "^0.7.0",
+    "eslint-plugin-vue": "^9.26.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "storybook": "^7.6.19",
+    "vite": "^4.5.3",
     "vue": "^3.2.25",
     "vue-loader": "^16.8.3"
   }
