--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
           with:
             node-version: 16
         - run: npm ci
+        - run: npx playwright install --with-deps
         - run: |
             npm run storybook &
             sleep 5
