--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nwl-components",
-  "version": "1.3.17",
+  "version": "1.3.18",
   "files": [
     "dist"
   ],
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.4",
     "@faker-js/faker": "^6.0.0-alpha.6",
+    "@fontsource/roboto": "^5.2.6",
     "@storybook/addon-essentials": "^7.6.19",
     "@storybook/addon-interactions": "^7.6.19",
     "@storybook/addon-links": "^7.6.19",
